Power and Beauty signage for upper and lower lobby. And target atrium.

--- a/TARGET-ATRIUM/index.html
+++ b/TARGET-ATRIUM/index.html
@@ -9,8 +9,8 @@
 
 <script>
 var name = "TARGET-ATRIUM"
-var imageString = "atrium-1.jpg atrium-2.jpg atrium-3.jpg atrium-4.jpg atrium-5.jpg atrium-6.jpg family.jpg third-thursday.jpg "
-var caption = ``
+var imageString = "atrium-1.jpg atrium-2.jpg atrium-3.jpg atrium-4.jpg family.jpg third-thursday.jpg "
+var caption = ` `
 </script>
 <script src="./app.js"></script>
 
