--- a/TARGET-ATRIUM/index.html
+++ b/TARGET-ATRIUM/index.html
@@ -8,8 +8,8 @@
 <body style="background-color:black;color:white;margin:0px;width:100vw; height: 100vh; overflow: hidden;">
 
 <script>
-var name = "TARGET-ATRIUM"
-var imageString = "atrium-1.jpg atrium-2.jpg atrium-3.jpg atrium-4.jpg family.jpg third-thursday.jpg "
+var name = 'TARGET-ATRIUM'
+var imageString = 'atrium-1.jpg atrium-2.jpg atrium-3.jpg atrium-4.jpg family.jpg third-thursday.jpg '
 var caption = ` `
 </script>
 <script src="./app.js"></script>
@@ -26,11 +26,6 @@ img {
   z-index: 1;
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(at bottom right,
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0.25),
-    rgba(0, 0, 0, 0.05),
-    rgba(0, 0, 0, 0));
 }
 
 .caption {
@@ -57,4 +52,3 @@ img {
 </style>
 </body>
 </html>
-
